Update issue templates

--- a/.github/ISSUE_TEMPLATE/구현문제발생.md
+++ b/.github/ISSUE_TEMPLATE/구현문제발생.md
@@ -1,6 +1,6 @@
 ---
 name: 구현문제발생
-about: Project1
+about: Project
 title: "[Invalid]"
 labels: invalid
 assignees: ''
@@ -8,10 +8,11 @@ assignees: ''
 ---
 
 **문제 발생 지점**
->
+- [ ] 
+- [ ] 
 
-**문제 해결 방법**
->
+**문제 해결 사항**
+*[2023.12.09]*
 
 **참고 사항**
 >
